4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

------------------------------------------------------------------------------
Changes for 1.9.0:

*/Makefile{in.am}: Fix plugin makefiles so that 'make distcheck' works.  Using
  relative path names for files to include in distribution does not work -
  need to have a makefile in each directory.
configure{.ac}: Updated as result of new Makefiles.
MSW 2006-02-24

Apply patch #1428057 courtesy Pippijn van Steenhoven: fix to a crashing bug in plugins
(incoherent order of parameters).
Also use plugin_common.h in CFAnim instead of having separate definitions.
Modified files:
 plugins/cfanim/cfanim.c
 plugins/cfanim/include/cfanim.h
 plugins/cfanim/include/cfanim_proto.h
 plugins/common/plugin_common.c
 plugins/common/include/plugin_common.h
Ryo 2006-02-23

Remove object type CONFUSION since it was not used anymore.
---
common/item.c: Remove CONFUSION entry from item_types[] array.
include/define.h: Uncomment #define CONFUSION.
Andreas Kirschbaum 2006-02-22

lib/collect.pl.in: Fix generation of 'editor_folder' field. It did not work
   too well for .arc files in deep subdirs.
lib/{archetypes,bmaps.paths,crossfire.0}: Rebuilt.
Andreas Kirschbaum 2006-02-21

random_maps/random_map.c: Cause the random map generator to skip certain
    elements if the style is set to "none".
doc/Developers/random-maps: Document above change
Alex Schultz 2006-02-20

socket/request.c: Don't crash on trying to send a spell which doesn't have an
   associated skill
Brendan Lally 2006-02-20

Do not allow to dimension door into monsters or earthwalls.
---
server/spell_effect.c: In dimension_door() do not allow destinations that are
   P_IS_ALIVE.
Andreas Kirschbaum 2006-02-19
