@@ -20,6 +20,10 @@ Changes for CVS:
 ------------------------------------------------------------------------------
 Changes for 1.9.0:
 
+lib/collect.pl.in: Again fix generation of 'editor_folder' field to make
+   sub-folder selection work again.
+Andreas Kirschbaum 2006-02-26
+
 */Makefile{in.am}: Fix plugin makefiles so that 'make distcheck' works.  Using
   relative path names for files to include in distribution does not work -
   need to have a makefile in each directory.
